@@ -84,3 +84,38 @@ check_info["ibm_svc_enclosurestats.temp"] = {
 }
 
 #.
+#   .--power---------------------------------------------------------------.
+#   |                                                                      |
+#   |                    _ __   _____      _____ _ __                      |
+#   |                   | '_ \ / _ \ \ /\ / / _ \ '__|                     |
+#   |                   | |_) | (_) \ V  V /  __/ |                        |
+#   |                   | .__/ \___/ \_/\_/ \___|_|                        |
+#   |                   |_|                                                |
+#   '----------------------------------------------------------------------'
+
+def inventory_ibm_svc_enclosurestats_power(info):
+    inventory = []
+    for enclosure_id, stat_name, stat_current, stat_peak, stat_peak_time in info:
+        if stat_name == "power_w":
+            inventory.append( (enclosure_id, None) )
+    return inventory
+
+def check_ibm_svc_enclosurestats_power(item, _no_params, info):
+    perfdata = []
+
+    for enclosure_id, stat_name, stat_current, stat_peak, stat_peak_time in info:
+        if enclosure_id == item and stat_name == "power_w":
+            stat_current = int(stat_current)
+            perfdata = [ ('power', str(stat_current)+"Watt") ]
+            return 0, "Enclosure %s Power Consumption is %s Watt" % (enclosure_id, stat_current), perfdata
+
+    return 3, "Power for enclosure %s not found in agent output" % item
+
+check_info["ibm_svc_enclosurestats.power"] = {
+    "check_function"        : check_ibm_svc_enclosurestats_power,
+    "inventory_function"    : inventory_ibm_svc_enclosurestats_power,
+    "service_description"   : "IBM SVC Power Enclosure %s",
+    "has_perfdata"          : True,
+}
+
+#.
