@@ -918,6 +918,12 @@ def perfometer_check_mk_ibm_svc_cache(row, check_command, perf_data):
 perfometers["check_mk-ibm_svc_nodestats.cache"] = perfometer_check_mk_ibm_svc_cache
 perfometers["check_mk-ibm_svc_systemstats.cache"] = perfometer_check_mk_ibm_svc_cache
 
+def perfometer_check_mk_ibm_svc_power(row, check_command, perf_data):
+    watt = int(perf_data[0][1])
+    text = "%s Watt" % watt
+    return text, perfometer_logarithmic(watt, 150, 2, "#60f020")
+perfometers["check_mk-ibm_svc_enclosurestats.power"] = perfometer_check_mk_ibm_svc_power
+
 def perfometer_licenses_percent(row, check_command, perf_data):
     licenses = float(perf_data[0][1])
     max_avail = float(perf_data[0][5])
